모든 커맨드 onTabComplete 상세하게 수정