@@ -30,11 +30,32 @@ public class CMDHandler implements TabExecutor {
         Player player = (Player) commandSender;
         if (strings.length == 1) {
             switch (s) {
-                case "파티":
+                case "파티" -> {
+                    if (strings[0].contains("생")) return List.of("생성");
+                    else if (strings[0].contains("해")) return List.of("해산");
+                    else if (strings[0].contains("초")) return List.of("초대");
+                    else if (strings[0].contains("수")) return List.of("수락");
+                    else if (strings[0].contains("거")) return List.of("거절");
+                    else if (strings[0].contains("파")) return List.of("파티장위임");
+                    else if (strings[0].contains("목")) return List.of("목록");
+                    else if (strings[0].contains("강")) return List.of("강퇴");
+                    else if (strings[0].contains("채")) return List.of("채팅");
+                    else if (strings[0].contains("나")) return List.of("나가기");
                     return Arrays.asList("생성", "해산", "초대", "수락", "거절", "파티장위임", "목록", "강퇴", "채팅", "나가기");
-                case "친구":
+                }
+                case "친구" -> {
+                    if (strings[0].contains("추")) return List.of("추가");
+                    else if (strings[0].contains("수")) return List.of("수락");
+                    else if (strings[0].contains("거")) return List.of("거절");
+                    else if (strings[0].contains("삭")) return List.of("삭제");
+                    else if (strings[0].contains("목")) return List.of("목록");
+                    else if (strings[0].contains("차")) {
+                        if (strings[0].contains("목")) return List.of("차단목록");
+                        return Arrays.asList("차단", "차단목록");
+                    }
                     return Arrays.asList("추가", "수락", "거절", "삭제", "목록", "차단", "차단목록");
-                case "귓속말", "귓말", "귓", "tell", "msg", "w":
+                }
+                case "귓속말", "귓말", "귓", "tell", "msg", "w" -> {
                     if (strings[0].contains("설")) {
                         return List.of("설정");
                     } else if (strings[0].isEmpty()) {
@@ -46,13 +67,24 @@ public class CMDHandler implements TabExecutor {
                         return dmList;
                     }
                     return null;
-                case "돈":
-                    if (player.isOp()) return Arrays.asList("보내기", "주기", "뺏기");
+                }
+                case "돈" -> {
+                    if (player.isOp()) {
+                        if (strings[0].contains("보")) return List.of("보내기");
+                        else if (strings[0].contains("주")) return List.of("주기");
+                        else if (strings[0].contains("뺏")) return List.of("뺏기");
+                        return Arrays.asList("보내기", "주기", "뺏기");
+                    }
                     return List.of("보내기");
+                }
             }
         } else if (strings.length == 2) {
             if (s.equals("친구")) {
-                if (strings[0].equals("차단")) return Arrays.asList("추가", "해제");
+                if (strings[0].equals("차단")) {
+                    if (strings[1].contains("추")) return List.of("추가");
+                    else if (strings[1].contains("해")) return List.of("해제");
+                    return Arrays.asList("추가", "해제");
+                }
                 else if (strings[0].equals("삭제")) {
                     List<String> friendList = new ArrayList<>();
                     for (String uuid : FriendData.getPlayerFriendList(player.getUniqueId()))
